--- a/wp-content/themes/carnes-crossroads-2015/scss/_page-templates.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_page-templates.scss
@@ -1,8 +1,6 @@
 // Template Page Styles
 // ===================================
 
-$navbar-offset: 135px;
-
 .hero {
     margin: 0;
     display: block;
