--- a/wp-content/themes/carnes-crossroads-2015/scss/_variables.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_variables.scss
@@ -33,3 +33,6 @@ $dk-grey        : #58585a;
 $dkr-grey       : #363636;
 
 
+// Nav Offset
+// ===================================
+$navbar-offset: 135px;
